# 1010

./: .cproject  .project  1010!.cnf  CMakeLists.txt
Debug/: makefile
Debug/src/: subdir.mk  uex1010.d
src/: TADjuego.cpp  TADjuego.h  TADpieza.cpp  TADpieza.h  TADtablero.cpp  TADtablero.h  entorno.cpp  entorno.h  uex1010base2.cpp
